[UPDATE] contest-tab

--- a/src/app/modules/contests/pages/contest/contest-rating-changes/contest-rating-changes.component.html
+++ b/src/app/modules/contests/pages/contest/contest-rating-changes/contest-rating-changes.component.html
@@ -3,7 +3,7 @@
     <app-content-header [contentHeader]="contentHeader"></app-content-header>
 
     <div class="card {{ contest | contestClasses }}">
-      <div class="card-header pb-0">
+      <div class="card-header p-1">
         <contest-tab [contest]="contest"></contest-tab>
       </div>
       <div class="card-footer">
