--- a/src/app/modules/contests/pages/contest/contest-attempts/contest-attempts.component.html
+++ b/src/app/modules/contests/pages/contest/contest-attempts/contest-attempts.component.html
@@ -5,10 +5,10 @@
     <div class="row">
       <div [@fadeInLeftOnEnter] class="col-lg-9 col-md-12 col-sm-12 order-2 order-lg-1">
         <div class="card">
-          <div class="card-header pb-0">
+          <div class="card-header p-1">
             <contest-tab [contest]="contest"/>
           </div>
-          <div class="card-footer">
+          <div class="card-footer p-1">
             @if (isLoading && !total) {
               <div [style.height.px]="400">
                 <spinner></spinner>
