--- a/src/app/modules/contests/pages/contest/contest-problem/contest-problem.component.html
+++ b/src/app/modules/contests/pages/contest/contest-problem/contest-problem.component.html
@@ -9,7 +9,7 @@
         <div [@fadeInLeftOnEnter] class="col-lg-9 col-md-12 col-sm-12 order-2 order-lg-1">
           <div class="layout-spacing">
             <div class="card">
-              <div class="card-header pb-0">
+              <div class="card-header p-1">
                 <contest-tab [contest]="contest"></contest-tab>
                 @if (contest?.userInfo?.isRegistered && contest?.status == 0) {
                   <button
