--- a/src/app/modules/contests/pages/contest/contest-questions/contest-questions.component.html
+++ b/src/app/modules/contests/pages/contest/contest-questions/contest-questions.component.html
@@ -5,7 +5,7 @@
     <div class="row">
       <div [@fadeInLeftOnEnter]="" class="col-lg-9 col-md-12 col-sm-12 order-2 order-lg-1">
         <div class="card {{ contest | contestClasses }}">
-          <div class="card-header pb-0">
+          <div class="card-header p-1">
             <contest-tab [contest]="contest"></contest-tab>
           </div>
 
