[UPDATE] kep-table

--- a/src/app/shared/components/kep-table/kep-table.component.scss
+++ b/src/app/shared/components/kep-table/kep-table.component.scss
@@ -13,5 +13,9 @@ kep-table {
 
   tr:hover {
     background-color: rgba($primary, 0.1) !important;
+
+    @include dark-layout {
+      background-color: rgba($primary, 0.2) !important;
+    }
   }
 }
