[TINY CHANGE] contest attempts filter

--- a/src/app/modules/contests/pages/contest/contest-attempts/filter/contest-attempts-filter.component.html
+++ b/src/app/modules/contests/pages/contest/contest-attempts/filter/contest-attempts-filter.component.html
@@ -39,7 +39,7 @@
       </div>
 
       @if (currentUser) {
-        <div class="my-1 custom-control custom-checkbox">
+        <div class="mt-1 custom-control custom-checkbox">
           <input
             formControlName="userOnly"
             class="custom-control-input contest-bg-color"
