--- a/src/app/modules/problems/pages/attempts/attempts.component.html
+++ b/src/app/modules/problems/pages/attempts/attempts.component.html
@@ -2,21 +2,10 @@
   <div class="content-body">
     <app-content-header (refresh)="reloadPage()" [contentHeader]="contentHeader"></app-content-header>
 
-    <div class="mt-2 form-group">
-      @if (currentUser) {
-        <div class="custom-control custom-checkbox">
-          <input
-            [disabled]="isLoading"
-            type="checkbox"
-            class="custom-control-input"
-            [(ngModel)]="myAttempts"
-            (change)="reloadPage()"
-            [ngModelOptions]="{standalone: true}"
-            id="myAttempts"/>
-          <label class="custom-control-label" for="myAttempts">{{ 'MY_ATTEMPTS' | translate }}</label>
-        </div>
-      }
-    </div>
+
+    @if (currentUser) {
+      <attempts-filter (filterChange)="filterChange($event)"/>
+    }
 
     @if (!attempts && isLoading) {
       <div class="card" [style.height.px]='300'>
