--- a/src/app/modules/problems/pages/attempts/attempts.component.html
+++ b/src/app/modules/problems/pages/attempts/attempts.component.html
@@ -8,23 +8,25 @@
     }
 
     @if (!attempts && isLoading) {
-      <div class="card" [style.height.px]='300'>
+      <div class="card" [style.height.px]="300">
         <spinner></spinner>
       </div>
+    } @else if(attempts.length == 0) {
+      <empty-result/>
     } @else {
-      <attempts-table [hackEnabled]="true" [attempts]="attempts"></attempts-table>
-    }
+      <attempts-table [hackEnabled]="true" [attempts]="attempts"/>
 
-    <div class="mb-1">
-      <kep-pagination
-        (pageChange)="pageChange($event)"
-        (pageSizeChange)="pageSizeChange($event)"
-        [collectionSize]="total"
-        [maxSize]="maxSize"
-        [pageOptions]="pageOptions"
-        [pageSize]="pageSize"
-        [page]="pageNumber">
-      </kep-pagination>
-    </div>
+      <div class="mb-1">
+        <kep-pagination
+          (pageChange)="pageChange($event)"
+          (pageSizeChange)="pageSizeChange($event)"
+          [collectionSize]="total"
+          [maxSize]="maxSize"
+          [pageOptions]="pageOptions"
+          [pageSize]="pageSize"
+          [page]="pageNumber">
+        </kep-pagination>
+      </div>
+    }
   </div>
 </div>
