[REDIZAYN] home page | nachalo

--- a/src/app/modules/home/home.component.scss
+++ b/src/app/modules/home/home.component.scss
@@ -1,7 +1,7 @@
-.header-section {
-  margin-bottom: 530px;
-  
-  @media (min-width: 1799px) {
-    margin-bottom: 630px;
-  }
-}
+//.header-section {
+//  margin-bottom: 530px;
+//
+//  @media (min-width: 1799px) {
+//    margin-bottom: 630px;
+//  }
+//}
