--- a/src/app/modules/challenges/pages/challenge/question-card/question-card.component.html
+++ b/src/app/modules/challenges/pages/challenge/question-card/question-card.component.html
@@ -74,30 +74,34 @@
         </div>
 
         <div class="row">
-          <div class="col">
-            <ul class="list-group" dragula="basic-list-group-1" [(dragulaModel)]="conformityGroupOne"
-                id="basic-list-group-1">
-              @for (option of conformityGroupOne;track option) {
-                <li class="bg-gradient-primary list-group-item draggable">
-                  <div class="row justify-content-between">
-                    <div class="pl-1">
-                      {{ option }}
-                    </div>
-                    <div class="pr-1">
-                      <i class="text-primary" data-feather="arrow-right"></i>
-                    </div>
+          <div class="col-6">
+            <ul
+              class="list-group"
+              id="conformity-group-first"
+              dragula="conformity-group-first"
+              [(dragulaModel)]="conformityGroupFirst">
+              @for (option of conformityGroupFirst; track option) {
+                <li class="list-group-item card draggable mb-50 bg-light text-dark" style="cursor: grab;">
+                  <div class="card-body p-1 font-medium-2 mb-0 d-flex align-items-center justify-content-center text-center">
+                    {{ option }}
                   </div>
                 </li>
               }
             </ul>
           </div>
-          <div class="col">
-            <ul class="list-group" dragula="basic-list-group-2" [(dragulaModel)]="conformityGroupTwo"
-                id="basic-list-group-2">
-              @for (option of conformityGroupTwo;track option) {
-                <li class="bg-gradient-primary list-group-item draggable">
-                  <i class="text-white" data-feather="arrow-left"></i>
-                  {{ option }}
+
+
+          <div class="col-6">
+            <ul
+              class="list-group"
+              id="conformity-group-second"
+              dragula="conformity-group-second"
+              [(dragulaModel)]="conformityGroupSecond">
+              @for (option of conformityGroupSecond; track option) {
+                <li class="list-group-item card draggable mb-50 bg-light text-dark" style="cursor: grab;">
+                  <div class="card-body p-1 font-medium-2 mb-0 d-flex align-items-center justify-content-center text-center">
+                    {{ option }}
+                  </div>
                 </li>
               }
             </ul>
