--- a/src/app/modules/arena/pages/arena-tournament/arena-tournament.component.html
+++ b/src/app/modules/arena/pages/arena-tournament/arena-tournament.component.html
@@ -18,7 +18,7 @@
         </div>
 
         <div class="col-12 col-lg-6">
-          <div class="text-center">
+          <div class="text-center" *ngIf="arena.isRegistrated">
             @if (remainingTime && remainingTime <= 1000 * 60 * 2) {
               <div>
                 <ngb-alert [type]="'info'" [dismissible]="false">
