--- a/src/app/modules/problems/components/problem-body/problem-body.component.html
+++ b/src/app/modules/problems/components/problem-body/problem-body.component.html
@@ -1,4 +1,4 @@
-<div class="mt-2 text-dark">
+<div class="mt-2 text-dark problem-body">
   @if (problem.id != 1637) {
     <mathjax [content]="problem.body"></mathjax>
   }
@@ -102,6 +102,9 @@
 }
 @if (problem.id == 1954) {
   <problem1954></problem1954>
+}
+@if (problem.id == 1966) {
+  <problem1966></problem1966>
 }
 
 <hr>
