--- a/src/app/modules/contests/pages/contest/contest-problem/contest-problem.component.scss
+++ b/src/app/modules/contests/pages/contest/contest-problem/contest-problem.component.scss
@@ -24,6 +24,7 @@
   position: fixed;
   right: 2rem;
   bottom: 5%;
+  z-index: 1000;
 }
 
 .bg-light {
@@ -39,7 +40,7 @@
   border: none;
   border-radius: 10px;
   margin-bottom: 1rem;
-  width: calc(100% - 7rem);
+  width: calc(100% - 8rem);
 
   position: fixed;
   left: 2rem;
