--- a/src/app/modules/contests/pages/contest/contest-registrants/contest-registrants.component.html
+++ b/src/app/modules/contests/pages/contest/contest-registrants/contest-registrants.component.html
@@ -13,7 +13,7 @@
               <hr>
               </div>
               <div class="card-body">
-                <div class="table beautiful-table">
+                <div class="table-responsive beautiful-table">
                   <table class="table table-striped">
                     <thead>
                       <tr>
