[NEW REVOLUTION] contest title images

--- a/src/app/modules/contests/components/contestant-view/contests-rating-image/contests-rating-image.component.html
+++ b/src/app/modules/contests/components/contestant-view/contests-rating-image/contests-rating-image.component.html
@@ -1,5 +1,5 @@
 <img
     src="assets/images/contests/ratings/{{ title?.toLowerCase() }}.png"
-    [height]="size"
+    [width]="size"
     ngbTooltip="{{ title }}"
     class="{{ class }}">
