[UPDATE] kepcoin image

--- a/src/@core/layout/components/navbar/navbar-kepcoin/navbar-kepcoin.component.html
+++ b/src/@core/layout/components/navbar/navbar-kepcoin/navbar-kepcoin.component.html
@@ -8,11 +8,11 @@
       <div class="justify-content-between d-flex">
         <span>
           <i data-feather="plus"></i>
-          <img height="19" src="assets/images/icons/kepcoin.webp"> {{ earn }}
+          <img height="19" src="assets/images/icons/kepcoin.png"> {{ earn }}
         </span>
         <span>
           <i data-feather="minus"></i>
-          <img height="19" src="assets/images/icons/kepcoin.webp"> {{ spend }}
+          <img height="19" src="assets/images/icons/kepcoin.png"> {{ spend }}
         </span>
       </div>
     </div>
@@ -31,5 +31,5 @@
   [placement]="'bottom'"
   container="body"
 >
-  <img height="18" src="assets/images/icons/kepcoin.webp"> {{ currentUser?.kepcoin }}
+  <img height="18" src="assets/images/icons/kepcoin.png"> {{ currentUser?.kepcoin }}
 </a>
