--- a/src/app/modules/users/pages/user-profile/user-competition-prizes/user-competition-prize-card/user-competition-prize-card.component.html
+++ b/src/app/modules/users/pages/user-profile/user-competition-prizes/user-competition-prize-card/user-competition-prize-card.component.html
@@ -18,7 +18,7 @@
         {{ competitionPrize.telegramPremiumPeriod }} month
       </span>
     } @else if (competitionPrize.prizeType == 'KEPCOIN') {
-      <img class="mt-1" height="48" src="assets/images/icons/kepcoin.webp">
+      <img class="mt-1" height="48" src="assets/images/icons/kepcoin.png">
       <div class="text-dark">{{ competitionPrize.kepcoinValue }}</div>
     }
 
