--- a/src/@core/layout/components/navbar/navbar-daily-tasks/navbar-daily-tasks.component.html
+++ b/src/@core/layout/components/navbar/navbar-daily-tasks/navbar-daily-tasks.component.html
@@ -46,7 +46,7 @@
               <div class="media-body">
                 <p class="media-heading text-white">
                   {{ dailyTask.description }}
-                  <img ngbTooltip="Kepcoin" height="19" src="assets/images/icons/kepcoin.webp"> {{ dailyTask.kepcoin }}
+                  <img ngbTooltip="Kepcoin" height="19" src="assets/images/icons/kepcoin.png"> {{ dailyTask.kepcoin }}
                 </p>
                 <small class="notification-text">
                   @if (dailyTask.completed) {
