--- a/src/app/modules/kepcoin/kepcoin.component.html
+++ b/src/app/modules/kepcoin/kepcoin.component.html
@@ -68,7 +68,7 @@
                   <div class="timeline-event">
                     <div class="d-flex justify-content-between flex-sm-row flex-column mb-sm-0 mb-1">
                       <h6>
-                        <img height="19" src="assets/images/icons/kepcoin.webp"> {{ earn.kepcoin }}
+                        <img height="19" src="assets/images/icons/kepcoin.png"> {{ earn.kepcoin }}
                       </h6>
                       <span class="timeline-event-time">{{ earn.datetime }}</span>
                     </div>
@@ -142,7 +142,7 @@
               <div class="timeline-event">
                 <div class="d-flex justify-content-between flex-sm-row flex-column mb-sm-0 mb-1">
                   <h6>
-                    <img height="19" src="assets/images/icons/kepcoin.webp"> {{ spend.kepcoin }}
+                    <img height="19" src="assets/images/icons/kepcoin.png"> {{ spend.kepcoin }}
                   </h6>
                   <span class="timeline-event-time">{{ spend.datetime }}</span>
                 </div>
