--- a/src/app/shared/components/kepcoin-view/kepcoin-view.component.html
+++ b/src/app/shared/components/kepcoin-view/kepcoin-view.component.html
@@ -1,3 +1,3 @@
 <span class="badge badge-warning {{ customClass }}" ngbTooltip="Kepcoin" [ngStyle]="{'font-size.px': fontSize}">
-    <img height="{{ imgSize }}" src="assets/images/icons/kepcoin.webp">{{ value }}
+    <img height="{{ imgSize }}" src="assets/images/icons/kepcoin.png">{{ value }}
 </span>
