--- a/src/app/shared/components/kepcoin-view/kepcoin/kepcoin.component.html
+++ b/src/app/shared/components/kepcoin-view/kepcoin/kepcoin.component.html
@@ -1,1 +1,1 @@
-<span><img height="{{ imgSize }}" style="margin-right: {{ marginRight }}rem;" src="assets/images/icons/kepcoin.webp">{{ value }}</span>
+<span><img height="{{ imgSize }}" style="margin-right: {{ marginRight }}rem;" src="assets/images/icons/kepcoin.png">{{ value }}</span>
