[ADD] new chapter color | 21

--- a/src/app/styles/colors/chapters.scss
+++ b/src/app/styles/colors/chapters.scss
@@ -208,3 +208,12 @@
   $color: #000066,
   $dark-color: mix(black, #000066, 30),
 );
+
+// Basics of programming
+@include define-chapter-colors(
+  $id: 21,
+  $gradient-color: linear-gradient(45deg, mix(black, #000066, 0), mix(white, #000066, 10)),
+  $gradient-dark-color: linear-gradient(45deg, mix(black, #000066, 30), #000066),
+  $color: #000066,
+  $dark-color: mix(black, #000066, 30),
+);
