--- a/src/app/modules/courses/pages/course-lesson/part/lecture/lecture.component.html
+++ b/src/app/modules/courses/pages/course-lesson/part/lecture/lecture.component.html
@@ -1,11 +1,11 @@
 @for (part of lecture.parts; track part) {
   <div>
     @if (part.type == 1) {
-      <mathjax [content]="part.text"></mathjax>
+      <mathjax class="text-dark" [content]="part.text"></mathjax>
     }
     @if (part.type == 2) {
       <div class="position-relative">
-        <pre class="mt-1"><code [lineNumbers]="true" [languages]="['python']" [highlight]="part.sourceCode"></code></pre>
+        <pre class="mt-1"><code [lineNumbers]="true" [languages]="['python', 'cpp']" [highlight]="part.sourceCode"></code></pre>
 
         <div class="position-absolute position-right-0 position-top-0">
           <clipboard-button [text]="part.sourceCode"></clipboard-button>
