--- a/src/app/modules/courses/pages/course-lesson/lesson.component.html
+++ b/src/app/modules/courses/pages/course-lesson/lesson.component.html
@@ -20,9 +20,9 @@
 
         <div class="col-lg-9 col-md-8 col-sm-6">
           <div class="layout-spacing tour-step-4"
-            (keydown.ArrowLeft)="changeLessonPart(lessonPartIndex-1)"
-            (keydown.ArrowRight)="changeLessonPart(lessonPartIndex+1)"
-            >
+               (keydown.ArrowLeft)="changeLessonPart(lessonPartIndex-1)"
+               (keydown.ArrowRight)="changeLessonPart(lessonPartIndex+1)"
+          >
             @for (part of courseLesson.parts; track part; let index = $index) {
               <button
                 class="btn lesson-part-icon btn-sm"
@@ -35,14 +35,21 @@
           </div>
 
           <div class="layout-spacing"
-            (keydown.ArrowLeft)="changeLessonPart(lessonPartIndex-1)"
-            (keydown.ArrowRight)="changeLessonPart(lessonPartIndex+1)"
-            *blockUI="'lesson-part-section'"
-            >
+               (keydown.ArrowLeft)="changeLessonPart(lessonPartIndex-1)"
+               (keydown.ArrowRight)="changeLessonPart(lessonPartIndex+1)"
+               *blockUI="'lesson-part-section'"
+          >
             <div class="card mt-2 tour-step-5">
               <div class="card-header justify-content-center bg-gradient-primary">
                 <h3 class="card-title text-white">
-                  <div [innerHTML]="courseLesson.title"></div>
+                  {{ courseLesson.title }}
+                  @if (currentLessonPart?.contentType == 'lecture') {
+                    - {{ currentLessonPart?.content?.title }}
+                  } @else if (currentLessonPart?.contentType == 'problem') {
+                    - {{ 'Problem' | translate }}
+                  } @else if (currentLessonPart?.contentType == 'question') {
+                    - {{ 'Question' | translate }}
+                  }
                 </h3>
               </div>
               <div class="card-body mt-2">
@@ -51,45 +58,44 @@
                   (checkPartCompletionEvent)="checkPartCompletionEvent($event)"
                 ></lesson-part>
 
-                  <div class="row mt-2 justify-content-between">
-                    <div class="pl-1">
-                      @if (lessonPartIndex > 0) {
-                        <button (click)="changeLessonPart(lessonPartIndex-1)" class="btn btn-primary">
-                          <i data-feather="arrow-left"></i>
-                        </button>
-                      }
-                    </div>
-                    <div class="tour-step-6">
-                      <button ngbTooltip="{{ 'COURSES.DISCUSSION' | translate }}" (click)="toogleCommentsButton()" class="btn report-button round  btn-relief-primary">
-                        <i data-feather="message-circle" [size]="16"></i>
+                <div class="row mt-2 justify-content-between">
+                  <div class="pl-1">
+                    @if (lessonPartIndex > 0) {
+                      <button (click)="changeLessonPart(lessonPartIndex-1)" class="btn btn-primary">
+                        <i data-feather="arrow-left"></i>
                       </button>
-                    </div>
-                    <div class="pr-1">
-                      @if (lessonPartIndex + 1 < courseLesson.parts.length) {
-                        <button (click)="changeLessonPart(lessonPartIndex+1)"
-                          class="btn btn-primary">
-                          <i data-feather="arrow-right"></i>
-                        </button>
-                      }
-                    </div>
+                    }
                   </div>
-
+                  <div class="tour-step-6">
+                    <button ngbTooltip="{{ 'COURSES.DISCUSSION' | translate }}" (click)="toogleCommentsButton()" class="btn report-button round  btn-relief-primary">
+                      <i data-feather="message-circle" [size]="16"></i>
+                    </button>
+                  </div>
+                  <div class="pr-1">
+                    @if (lessonPartIndex + 1 < courseLesson.parts.length) {
+                      <button (click)="changeLessonPart(lessonPartIndex+1)"
+                              class="btn btn-primary">
+                        <i data-feather="arrow-right"></i>
+                      </button>
+                    }
+                  </div>
                 </div>
-              </div>
 
+              </div>
             </div>
 
-            @if (isCommentsShow) {
-              <div class="layout-spacing">
-                <lesson-part-comments
-                  [comments]="lessonPartComments"
-                  [lessonPartId]="currentLessonPart.id">
-                </lesson-part-comments>
-              </div>
-            }
-
           </div>
+
+          @if (isCommentsShow) {
+            <div class="layout-spacing">
+              <lesson-part-comments
+                [comments]="lessonPartComments"
+                [lessonPartId]="currentLessonPart.id">
+              </lesson-part-comments>
+            </div>
+          }
         </div>
-      </section>
-    </div>
+      </div>
+    </section>
   </div>
+</div>
