--- a/src/app/modules/courses/pages/course/course-info/course-info.component.html
+++ b/src/app/modules/courses/pages/course/course-info/course-info.component.html
@@ -12,12 +12,12 @@
 
         <div class="text-dark font-medium-2 mb-1">
           <i [size]="'18'" class="mr-25" [data-feather]="'info'"></i>
-          Ushbu kurs <b>9 ta</b> mavzudan iborat, har bir mavzu kichik ma'ruzalar, misollar, topshiriq va masalalardan iborat.
+          Ushbu kurs <b>{{ course.lessonsCount - 1 }} ta</b> mavzudan iborat, har bir mavzu kichik ma'ruzalar, misollar, topshiriq va masalalardan iborat.
         </div>
 
         <div class="text-dark font-medium-2">
           <i [size]="'18'" class="mr-25" [data-feather]="'check-circle'"></i>
-          Kurs davomida bajariladigan topshiriqlar soni <b>100 dan</b> ortiq.
+          Kurs davomida bajariladigan topshiriqlar soni <b>{{ course.tasksCount }}</b>.
         </div>
       </div>
 
